--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	git@github.com:DimitriGilbert/MQSensorsLib.git
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	olikraus/U8g2@^2.28.8
+	adafruit/DHT sensor library@^1.4.3
 
 [env:esp32]
 platform = espressif32
@@ -35,6 +36,7 @@ lib_deps =
 	git@github.com:DimitriGilbert/MQSensorsLib.git
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	olikraus/U8g2@^2.28.8
+	adafruit/DHT sensor library@^1.4.3
 
 [env:d1]
 board = d1_mini
@@ -49,3 +51,4 @@ lib_deps =
 	git@github.com:DimitriGilbert/MQSensorsLib.git
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	olikraus/U8g2@^2.28.8
+	adafruit/DHT sensor library@^1.4.3
