BMP085 support + cli like for sernsor and main generator

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps =
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit BMP085 Library@^1.2.1
 
 [env:esp32]
 platform = espressif32
@@ -37,6 +38,7 @@ lib_deps =
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit BMP085 Library@^1.2.1
 
 [env:d1]
 board = d1_mini
@@ -52,3 +54,4 @@ lib_deps =
 	adafruit/Adafruit CCS811 Library@^1.1.1
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit BMP085 Library@^1.2.1
