--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ lib_deps =
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
+	mathertel/Radio@^2.0.0
 
 [env:esp32]
 platform = espressif32
@@ -39,6 +40,7 @@ lib_deps =
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
+	mathertel/Radio@^2.0.0
 
 [env:d1]
 board = d1_mini
@@ -55,3 +57,4 @@ lib_deps =
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
+	mathertel/Radio@^2.0.0
