--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+upload_flags = --host_port=46667
 lib_deps = 
 	me-no-dev/ESP Async WebServer@^1.2.3
 	rlogiacco/CircularBuffer@^1.3.3
@@ -24,6 +25,9 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
 	mathertel/Radio@^2.0.0
+	mikem/RadioHead@^1.120
+	plerup/EspSoftwareSerial@^6.17.1
+	hallard/LibTeleinfo@^1.1.4
 
 [env:esp32]
 platform = espressif32
@@ -41,6 +45,9 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
 	mathertel/Radio@^2.0.0
+	mikem/RadioHead@^1.120
+	plerup/EspSoftwareSerial@^6.17.1
+	hallard/LibTeleinfo@^1.1.4
 
 [env:d1]
 board = d1_mini
@@ -58,3 +65,6 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
 	mathertel/Radio@^2.0.0
+	mikem/RadioHead@^1.120
+	plerup/EspSoftwareSerial@^6.17.1
+	hallard/LibTeleinfo@^1.1.4
