--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "minify-js" : "plop=$(minify src/common.js | sed 's/\"/\\\\\\\\\"/g');sed \"/\\/\\/ commonjs-start/,/\\/\\/ commonjs-end/{/^  \\/\\/ common/!d;};\" src/html.cpp -i && sed \"/\\/\\/ commonjs-start/,/\\/\\/ commonjs-end/c\\  \\/\\/ commonjs-start\\n  return \\\"$plop\\\";\\n  \\/\\/ commonjs-end\" src/html.cpp -i ",
+    "minify-css": "plop=$(minify src/common.css | sed 's/\"/\\\\\\\\\"/g');sed \"/\\/\\/ commoncss-start/,/\\/\\/ commoncss-end/{/^  \\/\\/ common/!d;};\" src/html.cpp -i && sed \"/\\/\\/ commoncss-start/,/\\/\\/ commoncss-end/c\\  \\/\\/ commoncss-start\\n  return \\\"$plop\\\";\\n  \\/\\/ commoncss-end\" src/html.cpp -i "
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "dependencies": {
     "@types/node": "^16.11.7",
     "eta": "^1.12.3",
+    "minify": "^9.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
