--- a/platformio.ini
+++ b/platformio.ini
@@ -28,13 +28,14 @@ lib_deps =
 	mikem/RadioHead@^1.120
 	plerup/EspSoftwareSerial@^6.17.1
 	hallard/LibTeleinfo@^1.1.4
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
 
 [env:esp32]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = az-delivery-devkit-v4
 framework = arduino
+upload_flags = --host_port=46667
 lib_deps = 
-	me-no-dev/ESP Async WebServer@^1.2.3
 	rlogiacco/CircularBuffer@^1.3.3
 	adafruit/Adafruit BME280 Library@^2.2.1
 	adafruit/Adafruit BMP280 Library@^2.4.2
@@ -48,23 +49,4 @@ lib_deps =
 	mikem/RadioHead@^1.120
 	plerup/EspSoftwareSerial@^6.17.1
 	hallard/LibTeleinfo@^1.1.4
-
-[env:d1]
-board = d1_mini
-platform = espressif8266
-framework = arduino
-lib_deps = 
-	me-no-dev/ESP Async WebServer@^1.2.3
-	rlogiacco/CircularBuffer@^1.3.3
-	adafruit/Adafruit BME280 Library@^2.2.1
-	adafruit/Adafruit BMP280 Library@^2.4.2
-	git@github.com:enjoyneering/HTU2xD_SHT2x_Si70xx.git
-	git@github.com:DimitriGilbert/MQSensorsLib.git
-	adafruit/Adafruit CCS811 Library@^1.1.1
-	olikraus/U8g2@^2.28.8
-	adafruit/DHT sensor library@^1.4.3
-	adafruit/Adafruit BMP085 Library@^1.2.1
-	mathertel/Radio@^2.0.0
-	mikem/RadioHead@^1.120
-	plerup/EspSoftwareSerial@^6.17.1
-	hallard/LibTeleinfo@^1.1.4
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
