--- a/platformio.ini
+++ b/platformio.ini
@@ -24,11 +24,12 @@ lib_deps =
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
-	mathertel/Radio@^2.0.0
-	mikem/RadioHead@^1.120
+	; mathertel/Radio@^2.0.0
+	; mikem/RadioHead@^1.120
 	plerup/EspSoftwareSerial@^6.17.1
 	hallard/LibTeleinfo@^1.1.4
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	z3t0/IRremote@^4.0.0
 
 [env:esp32]
 platform = espressif32
@@ -45,8 +46,9 @@ lib_deps =
 	olikraus/U8g2@^2.28.8
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit BMP085 Library@^1.2.1
-	mathertel/Radio@^2.0.0
-	mikem/RadioHead@^1.120
+	; mathertel/Radio@^2.0.0
+	; mikem/RadioHead@^1.120
 	plerup/EspSoftwareSerial@^6.17.1
 	hallard/LibTeleinfo@^1.1.4
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	z3t0/IRremote@^4.0.0
