--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-upload_flags = --host_port=46667
+; upload_flags = --host_port=46667
 board_build.filesystem = littlefs
+monitor_filters = esp8266_exception_decoder, default
 lib_deps = 
 	me-no-dev/ESP Async WebServer@^1.2.3
 	rlogiacco/CircularBuffer@^1.3.3
