--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,8 @@ lib_deps =
 platform = espressif32
 board = az-delivery-devkit-v4
 framework = arduino
-upload_flags = --host_port=46667
+; upload_flags = --host_port=46667
+board_build.filesystem = littlefs
 lib_deps = 
 	rlogiacco/CircularBuffer@^1.3.3
 	adafruit/Adafruit BME280 Library@^2.2.1
