--- a/completely.yaml
+++ b/completely.yaml
@@ -4,6 +4,7 @@ StationIO:
 - create-main
 - list
 - read
+- read-all
 - set-conf
 - upload
 StationIO build-fs:
@@ -36,6 +37,8 @@ StationIO build-fs*--file:
 - <file>
 StationIO build-fs*--file-no-gz:
 - <file>
+StationIO build-fs*--upload:
+- $(if [ -d stations/.stations ]; then /usr/bin/ls stations/.stations ;fi)
 StationIO create:
 - --ip
 - --board
@@ -63,16 +66,8 @@ StationIO create-main:
 - --loop
 - --node
 - --file
-
-
-
-
-
-
-
-
-
-
+StationIO create-main*--sensor:
+- $(if [ -d src/sensors ]; then echo bme280 bmp085 bmp280 ccs811 dht11 linky mq135 mq2 sht21 ;fi)
 StationIO create-main*--file:
 - <file>
 StationIO list:
@@ -90,11 +85,15 @@ StationIO read:
 - -m
 - --output
 - -o
-
-
-
 StationIO read*--output:
 - <file>
+StationIO read-all:
+- --exclude
+- -x
+- --format
+- -f
+- --output
+- -o
 StationIO set-conf:
 - $(if [ -d stations/.stations ]; then /usr/bin/ls stations/.stations ;fi)
 - --sensor
